--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CVFrontEnd.CSS">
+    <link rel="stylesheet" href="./index.CSS">
     <title>CV APP</title>
 </head>
 <body>
@@ -29,7 +29,8 @@
         </button>
     </div>
     <div id="image">
-        <img src="./Screenshot 2025-11-18 210048.png" id="profile-pic" alt="CV Samples">
+        <img src="./CVSamples.png" id="profile-pic" alt="CV Samples">
     </div>
+    <script src="./CVscript.JS"></script>
 </body>
 </html>
