--- a/Tabs.html
+++ b/Tabs.html
@@ -8,13 +8,6 @@
 </head>
 <body>
     <div id="PersonalInfoFrame">
-        <div id="backbutton">
-            <button id="back">
-                <h1 id="B">
-                    Back
-                </h1>
-            </button>
-        </div>
         <div id="InfoTitle">
             <h1 id="fill">
                 Fill your personal information to get started!
@@ -22,6 +15,31 @@
         </div>
     </div>
     <div id="PersonalInfoPage">
+        <div id="QANSdivs">
+            <div id="Qdiv">
+                <h1 id="q">
+                    Enter your full name as in your national ID
+                </h1>
+            </div>
+            <div id="ansdiv">
+                <input type="text" id="ans">
+            </div>
+        </div>
+        <div id="NextBackButtons">
+            <div id="backbutton">
+                <button id="back">
+                    <h1 id="B">
+                        Back
+                    </h1>
+                </button>
+            </div>
+            <div id="nextbutton">
+                <button id="next">
+                    <h1 id="N">
+                        Next
+                    </h1>
+                </button>
+            </div>
     </div>
     <script src="./CVscript.JS"></script>
 </body>
