--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="homepage">
         <div id="Title">
             <h1 id="titleh1">
-                Turn Your <span>Hard-Earned</span> Experience Into A Job-Winning Masterpiece 
+                Turn Your Hard-Earned Experience Into A Job-Winning Masterpiece 
                 With Our <span>AI Powered</span> CV Builder
             </h1>
         </div>
