--- a/Tabs.html
+++ b/Tabs.html
@@ -40,6 +40,7 @@
                     </h1>
                 </button>
             </div>
+        </div>
     </div>
     <script src="./CVscript.JS"></script>
 </body>
