--- a/Tabs.html
+++ b/Tabs.html
@@ -15,15 +15,95 @@
         </div>
     </div>
     <div id="PersonalInfoPage">
-        <div id="QANSdivs">
-            <div id="Qdiv">
-                <h1 id="q">
-                    Enter your full name as in your national ID
-                </h1>
+        <div id="Questions">
+            <div id="step1" class="question-step">
+                <div id="Qdiv">
+                    <h1 id="q">
+                        Enter your full name as in your national ID
+                    </h1>
+                </div>
+                <div id="ansdiv">
+                    <input type="text" id="ans">
+                </div>
             </div>
-            <div id="ansdiv">
-                <input type="text" id="ans">
+
+            <div id="step2" class="question-step" style="display: none;">
+                <div id="Qdiv">
+                    <h1 id="q">
+                        Enter your Career Objective
+                    </h1>
+                </div>
+                <div id="ansdiv">
+                    <input type="text" id="ans">
+                </div>
             </div>
+
+            <div id="step3" class="question-step" style="display: none;">
+                <div id="Qdiv">
+                    <h1 id="q">
+                        Enter your phone number
+                    </h1>
+                </div>
+                <div id="ansdiv">
+                    <input type="text" id="ans">
+                </div>
+            </div>
+
+            <div id="step4" class="question-step" style="display: none;">
+                <div id="Qdiv">
+                    <h1 id="q">
+                        Enter your email address
+                    </h1>
+                </div>
+                <div id="ansdiv">
+                    <input type="text" id="ans">
+                </div>
+            </div>
+
+            <div id="step5" class="question-step" style="display: none;">
+                <div id="Qdiv">
+                    <h1 id="q">
+                        City of Living
+                    </h1>
+                </div>
+                <div id="ansdiv">
+                    <input type="text" id="ans">
+                </div>
+            </div>
+
+            <div id="step6" class="question-step" style="display: none;">
+                <div id="Qdiv">
+                    <h1 id="q">
+                        linkedin URL
+                    </h1>
+                </div>
+                <div id="ansdiv">
+                    <input type="text" id="ans">
+                </div>
+            </div>
+
+            <div id="step7" class="question-step" style="display: none;">
+                <div id="Qdiv">
+                    <h1 id="q">
+                        Portofolio/Personal website
+                    </h1>
+                </div>
+                <div id="ansdiv">
+                    <input type="text" id="ans">
+                </div>
+            </div>
+
+            <div id="step8" class="question-step" style="display: none;">
+                <div id="Qdiv">
+                    <h1 id="q">
+                        Professional Summary [3-5 Lines]
+                    </h1>
+                </div>
+                <div id="ansdiv">
+                    <input type="text" id="ans">
+                </div>
+            </div>
+
         </div>
         <div id="NextBackButtons">
             <div id="backbutton">
